--- a/styles/sass/_page-blog.scss
+++ b/styles/sass/_page-blog.scss
@@ -12,12 +12,14 @@
 		grid-template-columns: 20rem 2fr;
 		grid-template-rows: auto 1fr;
 		gap: Min(Max(1em, 4vw), 2em);
+
 		main {
-			overflow-x: hidden;
 			grid-column: 2 / 3;
 			grid-row: 1 / 3;
+			// blog-image max width
+			max-width: 975px;
 			margin-top: var(--blog-main-y-offset);
-			margin-right: calc(-1 * var(--px));
+			margin-right: calc(-1 * var(--px) + var(--shadow-offset));
 			margin-bottom: 2rem;
 			.blog-body,
 			.blog-comments,
@@ -58,7 +60,9 @@
 	}
 
 	.blog-body {
-		padding: 2em 0;
+		padding-top: 2em;
+		padding-bottom: 2em;
+		padding-left: 1em;
 		$border: 0.25rem solid var(--clr-accent);
 		border-left: $border;
 		border-bottom: $border;
@@ -86,6 +90,7 @@
 
 .blog-comments {
 	margin-top: 2rem;
+	padding-left: 1em;
 }
 
 .blog-comment {
